# plasma-pa

./: CMakeLists.txt
applet/contents/config/: main.xml
applet/contents/ui/: ConfigGeneral.qml  main.qml
src/: CMakeLists.txt  gconfitem.cpp  gconfitem.h  modulemanager.cpp  modulemanager.h
src/kcm/: CMakeLists.txt  module.cpp
src/qml/: plugin.cpp
